--- a/scss/_landing.scss
+++ b/scss/_landing.scss
@@ -11,12 +11,14 @@ html {
 .landing-page {
   height: 82vh;
   width: 100%;
+  min-height: 800px;
 
   .top-wrapper {
     display: flex;
     background: url("../files/bg.png") no-repeat center top;
     background-size: cover;
     height: 100%;
+
     width: 100%;
     margin-top: -6%;
 
@@ -27,9 +29,9 @@ html {
 
       .lang-select-wrapper {
         display: flex;
+        top: 500px;
+        left: 24px;
         position: fixed;
-        top: 41%;
-        left: 2rem;
 
         .lang-pl,
         .lang-en {
@@ -75,25 +77,94 @@ html {
       .skills-wrapper {
         width: 60%;
         height: 30%;
-        background: $secondary-color;
-        margin-left: 17.5%;
-        border-radius: 2rem;
-        margin-top: 8%;
-        box-shadow: -4px 4px 5px 0px rgba(0, 0, 0, 0.54);
+        min-height: 180px;
+        min-width: 480px;
+        margin-left: 170px;
+        margin-top: 5%;
+        display: flex;
+        flex-direction: column;
 
         h2 {
           text-align: center;
           padding-top: 1rem;
+          padding-bottom: 1rem;
           color: white;
           text-shadow: -3px 3px 0px rgba(53, 156, 172, 0.3);
         }
 
-        .uls {
-          width: 100%;
+        .skills-icons-top,
+        .skills-icons-middle {
+          font-family: "Segoe UI";
           display: flex;
-          margin-top: 1.5rem;
           justify-content: space-evenly;
-          color: #ebebeb;
+          min-width: 400px;
+          height: 250px;
+
+          .html5,
+          .css3,
+          .sass,
+          .js,
+          .jquery,
+          .angular {
+            width: 115px;
+            height: 40px;
+            display: flex;
+            align-items: center;
+            font-weight: bold;
+            font-size: 18px;
+            border-radius: 3px;
+            @include transition-ease;
+            cursor: pointer;
+            background: white;
+            box-shadow: 0px 4px 0px 0px rgba(200, 200, 200, 1);
+
+            &:hover {
+              transform: translateY(-3px);
+            }
+
+            .fab {
+              font-size: 32px;
+              margin-left: 5px;
+              margin-right: 10px;
+            }
+          }
+
+          .fa-html5 {
+            color: #de4b25;
+          }
+
+          .fa-css3-alt {
+            color: #28a4d9;
+          }
+
+          .fa-sass {
+            color: #cc6196;
+          }
+
+          .fa-js {
+            color: #df9f28;
+          }
+
+          .js {
+            width: 140px;
+          }
+
+          .jquery {
+            img {
+              width: 26px;
+              height: 26px;
+              margin-left: 5px;
+              margin-right: 12px;
+            }
+          }
+
+          .fa-angular {
+            color: #d70030;
+          }
+
+          .angular {
+            width: 120px;
+          }
         }
       }
     }
@@ -107,6 +178,8 @@ html {
         margin: 0 auto;
         width: 70%;
         height: 90%;
+        min-height: 560px;
+        min-width: 500px;
         background: $secondary-color;
         border-radius: 0 0 0 3rem;
         color: white;
@@ -224,6 +297,7 @@ html {
   width: 100%;
   height: 50%;
   background: $primary-color;
+  margin-bottom: 50px;
 
   h2 {
     text-align: center;
@@ -235,17 +309,20 @@ html {
   .projects {
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
     width: 100%;
-    height: 100%;
+    height: auto;
     background: $primary-color;
 
     .project {
       background: $secondary-color;
-      min-width: 400px;
+      min-width: 370px;
+      min-height: 500px;
       width: 21.5%;
       height: 80%;
       border-radius: 2rem;
       box-shadow: -4px 4px 5px 0px rgba(0, 0, 0, 0.54);
+      margin: 20px 30px 20px 30px;
 
       h3 {
         text-align: center;
@@ -258,8 +335,8 @@ html {
       .proj3-img {
         width: 90%;
         height: 40%;
-        min-width: 368px;
-        min-height: 200px;
+        min-width: 320px;
+        min-height: 180px;
         background: $btns-color;
         margin: 0.5rem auto 0 auto;
         border-radius: 1.5rem;
@@ -274,7 +351,7 @@ html {
       .proj-btns {
         width: 90%;
         height: 10%;
-        margin: 0 auto;
+        margin: 240px auto 0 auto;
         display: flex;
         justify-content: center;
 
@@ -322,6 +399,8 @@ html {
   height: 7%;
   min-height: 80px;
   width: 100%;
+  position: relative;
+  bottom: 0;
 }
 
 .bg-textures {
@@ -336,9 +415,9 @@ html {
   background: url("../files/dots2.png") no-repeat;
   position: absolute;
   top: 10%;
-  right: 0;
-  width: 10%;
-  height: 80%;
+  right: 0px;
+  width: 200px;
+  height: 200px;
 }
 
 .lang-pl,
@@ -353,6 +432,59 @@ html {
 .lang-clicked {
   background-color: $accent-color;
   color: white;
+}
+
+//////////////////
+// HD
+
+@media (max-width: 1280px) {
+  .wrapper {
+    height: auto;
+  }
+
+  .landing-page {
+    .top-wrapper {
+      .left,
+      .right {
+        height: 70%;
+      }
+
+      .left {
+        .logo {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          margin-top: -12%;
+          margin-left: -10%;
+
+          .logo-upper {
+            width: 250px;
+            height: 250px;
+            margin: 90px 0 0 90px;
+            @include transition-ease;
+            background: url("../files/logoUpper.png") center center no-repeat;
+          }
+        }
+
+        .skills-wrapper {
+          margin-top: 60px;
+        }
+      }
+    }
+  }
+
+  .projects-wrapper {
+    background: none;
+
+    .projects {
+      background: none;
+    }
+
+    h2 {
+      margin: -60px auto 0 auto;
+      background: none;
+    }
+  }
 }
 
 //////////////////
